fix: manual dark mode text

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -109,6 +109,10 @@
   }
 }
 
+.dark {
+  @apply text-foreground;
+}
+
 .dark,
 html:root[data-dark-mode="dark"] {
   --brand: #ff1fbb;
